apps/dev/linkding/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - image: sissbruecker/linkding:latest
          name: linkding
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: linkding-volume
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-volume
          persistentVolumeClaim:
            claimName: linkding-pvc
      restartPolicy: Always
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 25%
