apps/dev/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
