apps/dev/linkding/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: linkding
spec:
  ingressClassName: nginx
  rules:
  - host: "192.168.2.88"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
